@@ -5,7 +5,8 @@ ${GTK_CFLAGS}
 
 bin_PROGRAMS = rglclock
 
-rglclock_SOURCES = main.cc glclock.cc about.cc module.cc simple.c gdkgl.c
+rglclock_SOURCES = main.cc glclock.cc options.cc about.cc \
+module.cc simple.c gdkgl.c
 rglclock_LDADD = ${GL_LIBS} ${GTK_LIBS}
 
 noinst_HEADERS = glclock.h module.h simple.h gdkgl.h
