@@ -1,3 +1,4 @@
 main.cc
 glclock.cc
+options.cc
 about.cc
