@@ -1,0 +1,4 @@
+1999-02-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* POTFILES.in: Add options.cc.
+
